src/elements/snapshots/laser_pdf__elements__page__tests__breakable.snap
---
source: src/elements/page.rs
expression: "(primary.into_passes(), top_right.into_passes(), bottom_left.into_passes())"
---
(
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 5.0,
                    expand: true,
                },
                first_height: 11.0,
                preferred_height: None,
                page: 1,
                layer: 0,
                pos: (
                    12.0,
                    26.0,
                ),
                breakable: Some(
                    BreakableDraw {
                        full_height: 11.0,
                        preferred_height_break_count: 0,
                        breaks: [
                            Break {
                                page: 2,
                                layer: 0,
                                pos: (
                                    12.0,
                                    26.0,
                                ),
                            },
                        ],
                    },
                ),
            },
        ),
    ],
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 2.5,
                    expand: false,
                },
                first_height: 18.0,
                preferred_height: None,
                page: 1,
                layer: 0,
                pos: (
                    17.5,
                    28.0,
                ),
                breakable: None,
            },
        ),
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 2.5,
                    expand: false,
                },
                first_height: 18.0,
                preferred_height: None,
                page: 2,
                layer: 0,
                pos: (
                    17.5,
                    28.0,
                ),
                breakable: None,
            },
        ),
    ],
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 4.0,
                    expand: true,
                },
                first_height: 5.0,
                preferred_height: None,
                page: 1,
                layer: 0,
                pos: (
                    12.0,
                    15.0,
                ),
                breakable: None,
            },
        ),
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 4.0,
                    expand: true,
                },
                first_height: 5.0,
                preferred_height: None,
                page: 2,
                layer: 0,
                pos: (
                    12.0,
                    15.0,
                ),
                breakable: None,
            },
        ),
    ],
)
