src/elements/snapshots/laser_pdf__elements__page__tests__unbreakable-2.snap
---
source: src/elements/page.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            10.0,
        ),
        height: Some(
            20.0,
        ),
    },
    breakable: None,
}
