src/elements/snapshots/laser_pdf__elements__page__tests__unbreakable.snap
---
source: src/elements/page.rs
expression: "(primary.into_passes(), top_left.into_passes(), bottom_right.into_passes())"
---
(
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 5.0,
                    expand: true,
                },
                first_height: 11.0,
                preferred_height: None,
                page: 0,
                layer: 1,
                pos: (
                    12.0,
                    26.0,
                ),
                breakable: None,
            },
        ),
    ],
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 9.0,
                    expand: false,
                },
                first_height: 18.0,
                preferred_height: None,
                page: 0,
                layer: 0,
                pos: (
                    11.0,
                    28.0,
                ),
                breakable: None,
            },
        ),
    ],
    [
        Draw(
            DrawPass {
                width: WidthConstraint {
                    max: 4.0,
                    expand: true,
                },
                first_height: 5.0,
                preferred_height: None,
                page: 0,
                layer: 0,
                pos: (
                    18.0,
                    15.0,
                ),
                breakable: None,
            },
        ),
    ],
)
